--- a/webroot/assets/css/style.css
+++ b/webroot/assets/css/style.css
@@ -910,3 +910,18 @@ nbdo from print
     }
 
   }
+
+  .iframe-container {
+      padding-bottom: 60%;
+      padding-top: 30px; height: 0; overflow: hidden;
+  }
+
+  .iframe-container iframe,
+  .iframe-container object,
+  .iframe-container embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  }
