Update CSS Code
I add some CSS Code on line no 201 to 207

--- a/webroot/assets/css/style.css
+++ b/webroot/assets/css/style.css
@@ -198,6 +198,13 @@ Login from
 .form-control{
     border-radius: 0px;
 }
+.input-stock{
+    width:100px;
+}
+
+table .form-control{
+    width:75px;
+}
 
 
 button.btn-default-login {
